--- a/portfolio.html
+++ b/portfolio.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <meta charset="utf-8">
-            <meta lang="en-s">
-            <title>Jennifer Bazelak</title>
-            <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-        <div class="main-header">
-            <header>Jennifer Bazelak</header>
+<head>
+    <meta charset="utf-8">
+    <meta lang="en-s">
+    <title>Jennifer Bazelak</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-            <section class="tabs">
-                <a href="index.html">About Me</a>
-                <a href="portfolio.html">Portfolio</a>
+<body>
+    <div class="wrapper">
+        <nav class="nav-bar">
+            <h1 class="name">Jennifer Bazelak</h1>
+            <div class="tabs">
+                <a href="index.html">About</a> |
+                <a href="portfolio.html">Portfolio</a> |
                 <a href="contact.html">Contact</a>
-            </section>
-        </div>
+            </div>
+        </nav>
 
-    </head>
-    <body>
+
+
         <div class="main-content">
             <h1>Portfolio</h1>
             <hr>
-                <tabel style="width: 100%">
-                    <tr>
-                            <td><img src="#" alt="hangman"></td>
-                            <td><img src="#" alt="RPG Game"></td>
-                    </tr>
-                    <tr>
-                            <td><img src="#" alt="Trivia Game"></td>
-                            <td><img src="#" alt="Rutgers Info Widget"></td>
-                    </tr>
-                    <tr>
-                            <td><img src="#" alt="Rock Paper Scissors"></td>
-                    </tr>
-                </tabel>
+            <section id="Hangman">
+                <img src="http://placehold.it/200x200" alt="hangman">
+                <p class="project-title">Hangman</p>
+            </section>
+            <section id="RPG-Game">
+                <img src="http://placehold.it/200x200" alt="RPG Game">
+                <p class="project-title">RPG Game</p>
+            </section>
+            <section id="Trivia-Game">
+                <img src="http://placehold.it/200x200" alt="Trivia Game">
+                <p class="project-title">Trivia Game</p>
+            </section>
+            <section id="Rutgers">
+                <img src="http://placehold.it/200x200" alt="Rutgers Info Widget">
+                <p class="project-title">Rutgers Info Widget</p>
+            </section>
+            <section id="RPS">
+                <img src="http://placehold.it/200x200" alt="Rock Paper Scissors">
+                <p class="project-title">Rock Paper Scissors</p>
+            </section>
             </div>
-    </body>
-    <footer></footer>
+            <div class="push"></div>
+        </div>   
+        <footer class="footer">Copyright</footer>
+</body>
+
 </html>
