--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <meta charset="utf-8">
-            <meta lang="en-s">
-            <title>Jennifer Bazelak</title>
-            <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-        <div class="wrapper">
-            <nav class="nav-bar">
-                    <h1 class="name" >Jennifer Bazelak</h1>
-                    <div class="tabs">
-                    <a href="index.html">About</a> |
-                    <a href="portfolio.html">Portfolio</a> |
-                    <a href="contact.html">Contact</a>
-                    </div>
-                </nav>
+
+<head>
+    <meta charset="utf-8">
+    <meta lang="en-s">
+    <title>Jennifer Bazelak</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <nav class="nav-bar">
+            <h1 class="name">Jennifer Bazelak</h1>
+            <div class="tabs">
+                <a href="index.html">About</a> |
+                <a href="portfolio.html">Portfolio</a> |
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
 
         <div class="main-content">
             <h1>Contact</h1>
             <hr>
             <form class="form">
                 <section class="contact-input">
-                    <label>Name</label> <br>
-                    <input placeholder="John Smith"> <br>
+                    <label>Name</label>
+                    <br>
+                    <input placeholder="John Smith">
+                    <br>
                 </section>
                 <section class="contact-input">
-                    <label>Email</label> <br>
-                    <input placeholder="example@gmail.com"><br>
+                    <label>Email</label>
+                    <br>
+                    <input placeholder="example@gmail.com">
+                    <br>
                 </section>
                 <section class="contact-input">
-                    <label>Message</label> <br>
-                    <textarea></textarea><br>
+                    <label>Message</label>
+                    <br>
+                    <textarea></textarea>
+                    <br>
                 </section>
                 <button class="submit">Submit</button>
             </form>
         </div>
-        <div class="push"></div> 
-        </div>
-        <footer class="footer">Copyright</footer>
-    </body>
-    
+        <div class="push"></div>
+    </div>
+    <footer class="footer">Copyright</footer>
+</body>
+
 </html>
