--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <hr>
             <section id="Hangman">
                 <img src="http://placehold.it/200x200" alt="hangman">
-                <p class="project-title">Hangman</p>
+                <p class="project-title"><a href=https://jenniferbazelak.github.io/Word-Guess-Game/>Hangman</a></p>
             </section>
             <section id="RPG-Game">
                 <img src="http://placehold.it/200x200" alt="RPG Game">
@@ -44,10 +44,10 @@
                 <img src="http://placehold.it/200x200" alt="Rock Paper Scissors">
                 <p class="project-title">Rock Paper Scissors</p>
             </section>
-            </div>
-            <div class="push"></div>
-        </div>   
-        <footer class="footer">Copyright</footer>
+        </div>
+        <div class="push"></div>
+    </div>
+    <footer class="footer">Copyright</footer>
 </body>
 
 </html>
