--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
             <hr>
             <section id="Hangman">
                 <img src="http://placehold.it/200x200" alt="hangman">
-                <p class="project-title"><a href=https://jenniferbazelak.github.io/Word-Guess-Game/>Hangman</a></p>
+                <p class="project-title"><a href=https://jenniferbazelak.github.io/Word-Guess-Game/>Word Guess Game</a></p>
             </section>
             <section id="RPG-Game">
-                <img src="http://placehold.it/200x200" alt="RPG Game">
-                <p class="project-title">RPG Game</p>
+                <img src="http://placehold.it/200x200" alt="Crystal">
+                <p class="project-title"><a href=https://jenniferbazelak.github.io/unit-4-game/>Crystal Collector</p>
             </section>
             <section id="Trivia-Game">
                 <img src="http://placehold.it/200x200" alt="Trivia Game">
