--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,11 @@
             </section>
             <section id="RPG-Game">
                 <img src="http://placehold.it/200x200" alt="Crystal">
-                <p class="project-title"><a href=https://jenniferbazelak.github.io/unit-4-game/>Crystal Collector</p>
+                <p class="project-title"><a href=https://jenniferbazelak.github.io/unit-4-game/>Crystal Collector</a></p>
             </section>
             <section id="Trivia-Game">
                 <img src="http://placehold.it/200x200" alt="Trivia Game">
-                <p class="project-title">Trivia Game</p>
+                <p class="project-title"><a href=https://jenniferbazelak.github.io/TriviaGame/>Trivia Game</a></p>
             </section>
             <section id="Rutgers">
                 <img src="http://placehold.it/200x200" alt="Rutgers Info Widget">
