--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             </section>
             <section id="Rutgers">
                 <img src="http://placehold.it/200x200" alt="Rutgers Info Widget">
-                <p class="project-title">Rutgers Info Widget</p>
+                <p class="project-title"><a href=https://jenniferbazelak.github.io/GifTastic/> GifTastic</p>
             </section>
             <section id="RPS">
                 <img src="http://placehold.it/200x200" alt="Rock Paper Scissors">
