--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             </section>
             <section id="RPS">
                 <img src="http://placehold.it/200x200" alt="Rock Paper Scissors">
-                <p class="project-title">Rock Paper Scissors</p>
+                <p class="project-title"><a href=https://jenniferbazelak.github.io/TrainTime/>Train Schedule</a></p>
             </section>
         </div>
         <div class="push"></div>
